<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".feature.login.view.ui.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/thirty_two"
        android:text="@string/tv_login_text"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        app:layout_constraintLeft_toLeftOf="@id/etPassword"
        app:layout_constraintRight_toRightOf="@id/etPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight"
        android:ems="10"
        android:hint="@string/et_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintLeft_toLeftOf="@id/etPassword"
        app:layout_constraintRight_toRightOf="@id/etPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:background="@drawable/btn_default_selector"
        android:text="@string/btn_login_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/tbAccessMode"
        app:layout_constraintEnd_toStartOf="@id/tbAccessMode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:background="@drawable/btn_default_selector"
        android:text="@string/btn_register_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@id/tbAccessMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/tbAccessMode"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/tbAccessMode"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_text"
        android:textAllCaps="false"
        android:textColor="@drawable/btn_text_color_selector"
        android:textOff="@string/btn_register_text"
        android:textOn="@string/btn_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tbAccessMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:contentDescription="@string/default_content_description"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_as_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>